--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
-    banana talk
+    <h1>banana talk</h1>
+<textarea style="height: 15vh; width:80%; margin: 1rem; padding: 1rem" id="txt-input" placeholder="enter some text and get convert it in banana " > </textarea>
+   <br> <button id="btn-translate">Translate</button>
+
+<div id="output"  style="height: 15vh; width:80%; border: 1px solid black; margin: 1rem; padding: 1rem;" ></div>
+
+    <script src="app.js"></script>
+    
 </body>
 </html>
